# iubase

./: .gitignore  README.md  coverage.txt  coverage.xml  pyproject.toml  pytest.ini  requirements.txt
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
accounts/tests/: fixtures.py  test_allauth.py  test_custom_user.py
conference/: admin.py  choices.py  forms.py  models.py  urls.py
conference/logic/: crpi.py  get_standings_data.py  resolve_ties.py  rpis.py  year.py
conference/migrations/: 0001_initial.py  0002_confteam.py  0003_rename_conference_confteam_conference.py  0004_conference_logo_url.py  0005_confseries.py  0006_alter_confseries_away_wins_and_more.py  0007_alter_confteam_fall_year_joined.py  0008_teamrpi.py  0009_rename_rpi_teamrpi_rpi_rank_and_more.py  0010_pick.py  0011_pick_result.py  0012_pickemregisterannual.py  0013_alter_pick_pick.py  0014_alter_pick_user.py  0015_remove_pick_pick_pick_pick_home_alter_pick_result.py
conference/tests/: test_conf_models.py  test_rpis.py  test_view_add_wins.py  test_view_choose_pick.py  test_view_conf_add_series.py  test_view_conf_index.py  test_view_conf_sched.py  test_view_conf_year.py  test_view_pickem_index.py  test_view_pickem_my_picks.py  test_view_pickem_register.py  test_view_picks_register.py  test_view_standings.py  test_views_conf_sched.py  test_views_picks_index.py
conference/views/: add_series.py  add_win.py  choose_pick.py  conf_index.py  conf_schedule.py  conf_year.py  crpi.py  my_pickem.py  pickem_index.py  pickem_register.py  picks_index.py  picks_register.py  resolve_ties_logic.py  standings.py
django_project/: apps.py  settings.py  urls.py  views.py
django_project/templates/: 400.html  403.html  404.html  500.html  base.html  robots.txt
django_project/templatetags/: cache_bust.py
django_project/tests/: clean_text.py  test_testing.py  test_views.py
index/: admin.py  models.py  urls.py  views.py
index/migrations/: 0001_initial.py  0002_alter_trafficcounter_ip.py  0003_alter_trafficcounter_user_agent.py  0004_alter_trafficcounter_ip_and_more.py
index/tests/: fixtures.py  test_index_views.py  test_integration.py  test_models.py  test_testing.py  test_views.py
live_game_blog/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  views.py  weather.py
live_game_blog/logic/: location.py  weather.py  weather_daily.py  weather_hourly.py  wind.py
live_game_blog/migrations/: 0001_initial.py  0002_alter_game_live_stats.py  0003_remove_gameblogentry_away_errors_and_more.py  0004_alter_game_inning_num.py  0005_alter_game_inning_part_alter_game_outs.py  0006_alter_game_inning_part.py  0007_alter_game_inning_part.py  0008_remove_game_away_errors_remove_game_away_hits_and_more.py  0009_remove_gamestatus_game_update_delete_gameblogentry_and_more.py  0018_game_home_seed.py  (+33 more)
player_tracking/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  views.py
(+264 files in other folders)
