[project]
name = "iubase"
version = "2026.01.31.1941"
requires-python = "==3.14.2"
dependencies = [
    "asgiref==3.11.0",
    "bs4>=0.0.2",
    "coverage==7.13.2",
    "django==6.0.1",
    "django-allauth[socialaccount]==65.14.0",
    "execnet==2.1.2",
    "gunicorn==24.1.1",
    "iniconfig==2.3.0",
    "markdown==3.10.1",
    "packaging==26.0",
    "pluggy==1.6.0",
    "psycopg==3.3.2",
    "psycopg-binary==3.3.2",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-xdist==3.8.0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests>=2.32.5",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
]

[tool.uv]
package = false
constraint-dependencies = ["urllib3>=2.6.3"]

[tool.ruff]
extend-exclude = ["tests"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_project.settings"
python_files = "test_*.py"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
